add ca-certificates to install

--- a/reddit_app_metadata.yaml
+++ b/reddit_app_metadata.yaml
@@ -20,6 +20,7 @@ packages:
   - ruby-bundler
   - build-essential
   - apt-transport-https
+  - ca-certificates
 
 # Вообще тут забавно получается. Пользователь appuser по логам создается в намного позже остальных действий,
 # и никак не сменить в его домашнем каталоге владельца:группу с рута на appuser в этой конигурации.
