Fix travis test: packer validate

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
   "v_folder_id": "<folder_id>",
-  "v_service_account_key_file": "key.json",
+  "v_service_account_key_file": "fake_key.json",
   "v_source_image_family": "ubuntu-1604-lts",
   "v_platform_id": "standard-v1",
   "v_ssh_username": "user",
