--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -1,8 +1,8 @@
-cloud_id                 = "specify_cloud_id"
-folder_id                = "specify_folder_id"
+folder_id                = "folder_id"
 zone                     = "ru-central1-a"
-image_id                 = "specify_image_id"
 public_key_path          = "~/.ssh/ubuntu.pub"
 private_key_path         = "~/.ssh/ubuntu"
 subnet_id                = "specify_subney_id"
 service_account_key_file = "path_to_key.json"
+app_disk_image           = "app_image_id"
+db_disk_image            = "db_image_id"
