--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./dynamic_inventory.py
+inventory = ./inventory.json
+#inventory = ./dynamic_inventory.py
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
