create app and db roles

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,19 @@
 [defaults]
-#inventory = ./inventory.json
-inventory = ./dynamic_inventory.py
+inventory = ./environments/stage/dynamic_inventory.py
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
+
+# Отключим проверку SSH Host-key
 host_key_checking = False
+
+# Отключим создание *.retry-файлов
 retry_files_enabled = False
+
+# расположение ролей (можно задать через ;)
+roles_path = ./roles
+
+[diff]
+# Обязательный вывод diff при наличии изменений
+always = True
+# Вывод 5 строк контекста
+context = 5
