create users role

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -12,6 +12,8 @@ retry_files_enabled = False
 # расположение ролей (можно задать через ;)
 roles_path = ./roles
 
+vault_password_file = ~/.ansible/vault.key
+
 [diff]
 # Обязательный вывод diff при наличии изменений
 always = True
