--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -6,7 +6,7 @@
       become: true
       apt:
         pkg: git
-        state: latest
+        state: present
 
     - name: Fetch the latest version of application code
       git:
