--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 dist: trusty
 sudo: required
 language: bash
+git:
+  quiet: true
 before_install:
-- curl https://raw.githubusercontent.com/express42/otus-homeworks/2020-08/run.sh |
-  bash
+  - curl https://raw.githubusercontent.com/express42/otus-homeworks/2020-08/run.sh | bash
+  - play-travis/run_checks.sh
 notifications:
   slack:
     rooms:
