fix travis check, update readme

--- a/ansible/playbooks/reddit_app_multiple_plays.yml
+++ b/ansible/playbooks/reddit_app_multiple_plays.yml
@@ -52,7 +52,7 @@
       become: true
       apt:
         pkg: git
-        state: latest
+        state: present
 
     - name: Fetch the latest version of application code
       git:
