molecule for db, roles for ansible

--- a/ansible/roles/db/molecule/default/playbook.yml
+++ b/ansible/roles/db/molecule/default/playbook.yml
@@ -1,10 +1,8 @@
 ---
-- name: Install MongoDB 4.2
-  hosts: all
+- name: Converge
   become: true
-
+  hosts: all
   vars:
     mongo_bind_ip: 0.0.0.0
-
   roles:
-    - db
+    - role: db
